<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KuliahActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/button_home_menu"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart  ="24dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/kuliah"
        android:textAlignment="center"
        android:textColor="@color/title_active"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_home_menu"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="13dp"
        android:layout_marginBottom="324dp"
        android:background="@drawable/bg_layout_white2"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textview_home_jeniskelas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="18dp"
            android:layout_marginRight="14dp"
            android:background="@drawable/bg_button_jeniskelas"
            android:fontFamily="@font/poppins_semibold"
            android:letterSpacing="0"
            android:paddingLeft="34dp"
            android:paddingTop="8dp"
            android:paddingRight="34dp"
            android:paddingBottom="8dp"
            android:text="Praktikum"
            android:textAllCaps="false"
            android:textColor="@color/primary"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/textview_home_matkul"
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/poppins_medium"
            android:lineSpacingExtra="26px"
            android:text="@string/matkul"
            android:textColor="@color/title_active"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textview_home_kelas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppins_medium"
            android:lineSpacingExtra="26px"
            android:text="@string/kelas"
            android:textColor="@color/title_active"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textview_home_jamkelas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="18dp"
            android:fontFamily="@font/poppins_medium"
            android:lineSpacingExtra="26px"
            android:text="@string/jamkelas"
            android:textColor="@color/body"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.0" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="326dp"
        android:background="@drawable/bg_layout_white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="0dp">


        <TextView
            android:id="@+id/textview_home_deskripsimatkul"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins_medium"
            android:lineSpacingExtra="26px"
            android:text="@string/matkul"
            android:textColor="@color/title_active"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textview_home_deskripsikelas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_toRightOf="@+id/icon_home_time"
            android:drawableStart="@drawable/ic_kelas"
            android:drawablePadding="10dp"
            android:fontFamily="@font/poppins_regular"
            android:lineSpacingExtra="26px"
            android:text="@string/deskripsikelas"
            android:textColor="@color/title_active"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/textview_home_deskripsidosen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="14dp"
            android:layout_toRightOf="@+id/icon_home_time"
            android:drawableStart="@drawable/ic_dosen"
            android:drawablePadding="10dp"
            android:drawableTint="@color/title_active"
            android:fontFamily="@font/poppins_regular"
            android:lineSpacingExtra="26px"
            android:text="@string/dosen"
            android:textColor="@color/title_active"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/textview_home_deadlineabsensi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="14dp"
            android:layout_toRightOf="@+id/icon_home_time"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:fontFamily="@font/poppins_regular"
            android:lineSpacingExtra="26px"
            android:text="@string/email"
            android:textColor="@color/title_active"
            android:textSize="14dp"
            app:layout_constraintLeft_toRightOf="@+id/icon_home_time" />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/navigation"
        app:labelVisibilityMode="unlabeled"
        app:itemIconTint="@color/body"
        android:background="@color/white"
        tools:layout_editor_absoluteX="0dp" />
</androidx.constraintlayout.widget.ConstraintLayout>