<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/navigation_home_menu"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"
        android:layout_gravity="start"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ImageButton
                android:id="@+id/button_home_menu"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart  ="24dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/ic_menu"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/view"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/kuliah"
                android:textAlignment="center"
                android:textColor="@color/title_active"
                android:textSize="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_home_menu"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textview_home_tanggal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/tanggal"
                android:textColor="@color/title_active"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintVertical_bias="0.0" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="220dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="13dp"
                android:background="@drawable/bg_layout_white2"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_home_tanggal"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/textview_home_jeniskelas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginRight="14dp"
                    android:background="@drawable/bg_button_jeniskelas"
                    android:fontFamily="@font/poppins_semibold"
                    android:letterSpacing="0"
                    android:paddingLeft="34dp"
                    android:paddingTop="8dp"
                    android:paddingRight="34dp"
                    android:paddingBottom="8dp"
                    android:text="Praktikum"
                    android:textAllCaps="false"
                    android:textColor="@color/primary"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/textview_home_matkul"
                    android:layout_width="121dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:layout_marginTop="14dp"
                    android:fontFamily="@font/poppins_medium"
                    android:lineSpacingExtra="26px"
                    android:text="@string/matkul"
                    android:textColor="@color/title_active"
                    android:textSize="14dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/textview_home_kelas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/poppins_medium"
                    android:lineSpacingExtra="26px"
                    android:text="@string/kelas"
                    android:textColor="@color/title_active"
                    android:textSize="14dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/textview_home_jamkelas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="18dp"
                    android:fontFamily="@font/poppins_medium"
                    android:lineSpacingExtra="26px"
                    android:text="@string/jamkelas"
                    android:textColor="@color/body"
                    android:textSize="14dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    app:layout_constraintVertical_bias="0.0" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/absensi"
                android:textColor="@color/title_active"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:layout_constraintVertical_bias="0.0" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="190dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="13dp"
                android:paddingRight="14dp"
                android:background="@drawable/bg_layout_white2"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/textview_home_matkulabsensi"
                    android:layout_width="177dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:layout_marginTop="14dp"
                    android:fontFamily="@font/poppins_medium"
                    android:lineSpacingExtra="26px"
                    android:text="@string/matkul"
                    android:textColor="@color/title_active"
                    android:textSize="14dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/textview_home_kelasabsensi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/poppins_medium"
                    android:lineSpacingExtra="26px"
                    android:text="@string/kelas"
                    android:textColor="@color/title_active"
                    android:textSize="14dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    app:layout_constraintVertical_bias="0.0" />


                <TextView
                    android:id="@+id/textview_home_deadlineabsensi"
                    android:layout_toRightOf="@+id/icon_home_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:layout_marginTop="4dp"
                    android:drawableStart="@drawable/ic_time"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/poppins_medium"
                    android:lineSpacingExtra="26px"
                    android:text="@string/deadline"
                    android:textColor="@color/body"
                    android:textSize="14dp"
                    app:layout_constraintLeft_toRightOf="@+id/icon_home_time" />

                <LinearLayout
                    android:id="@+id/linearlayout_home_absensi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_layout_white2"
                    android:orientation="horizontal"
                    android:layout_marginTop="14dp"
                    android:layout_marginLeft="14dp"
                    app:layout_constraintBottom_toBottomOf="@+id/view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textview_home_tanggal"
                    app:layout_constraintVertical_bias="0.0">

                    <ImageButton
                        android:id="@+id/button_home_hadir"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/drawable_icon_hadir"
                        />

                    <ImageButton
                        android:id="@+id/button_home_izin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/drawable_icon_izin"
                        />

                    <ImageButton
                        android:id="@+id/button_home_sakit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/drawable_icon_sakit"
                        />
                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="@+id/view"
                app:layout_constraintVertical_bias="1.0"
                app:menu="@menu/navigation"
                app:labelVisibilityMode="unlabeled"
                app:itemIconTint="@color/body"
                android:background="@color/white"
                tools:layout_editor_absoluteX="0dp" />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.drawerlayout.widget.DrawerLayout>

